Fix EU Cookie Law popup width
Fix popup not showing at full page width when maximizing
browser window on very high resolution displays

--- a/css/eu-cookie-law.css
+++ b/css/eu-cookie-law.css
@@ -7,8 +7,8 @@
   position: fixed;
   top: 0;
   z-index: 2000;
+  width: 100%;
 }
-
 
 .cookiebanner a.close-cookie-banner {
     background: red none repeat scroll 0 0;
